--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "json-server": "^0.17.0",
+    "json-server": "^0.17.3",
     "json-server-auth": "^2.1.0"
   }
 }
